--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,9 +8,10 @@
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ "/assets/css/resumecard.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | prepend: site.baseurl }}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="{{ '/assets/css/resumecard.css' | prepend: site.baseurl }}">
 
   <link rel="icon" type="image/png" href="{{ site.favicon | prepend: site.baseurl }}">
 
@@ -25,5 +26,5 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="{{ '/assets/js/bootstrap.min.js' | prepend: site.baseurl }}"></script>
 </head>
