--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-	<div class="ribbon right red">
-	  <a href="https://github.com/ddbullfrog/resumecard">Fork me on GitHub</a>
-	</div>
+  <a class="hidden-print hidden-xs hidden-sm github-fork-ribbon fixed left-bottom" href="https://github.com/gogout/resumecard" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
+  <a class="hidden-print hidden-md hidden-lg github-fork-ribbon right-top" href="https://github.com/gogout/resumecard" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
   {% include head.html %}
 
   <body>
