--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <a class="hidden-print hidden-xs hidden-sm github-fork-ribbon fixed left-bottom" href="https://github.com/gogout/resumecard" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
-  <a class="hidden-print hidden-md hidden-lg github-fork-ribbon right-top" href="https://github.com/gogout/resumecard" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
+  <a class="hidden-print hidden-xs hidden-sm github-fork-ribbon fixed left-bottom" href="https://github.com/gogoout/resumecard" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
+  <a class="hidden-print hidden-md hidden-lg github-fork-ribbon right-top" href="https://github.com/gogoout/resumecard" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
   {% include head.html %}
 
   <body>
