--- a/assets/css/resumecard.scss
+++ b/assets/css/resumecard.scss
@@ -343,6 +343,7 @@ $duration : 500ms;
 /*!
  * "Fork me on GitHub" CSS ribbon v0.2.0 | MIT License
  * https://github.com/simonwhitaker/github-fork-ribbon-css
+ * modified to make it flat
 */
 
 .github-fork-ribbon {
@@ -388,20 +389,8 @@ $duration : 500ms;
   padding            : .38em 0;
 
   /* Set the base colour */
-  background-color   : #A00;
+  background-color: darken(saturate($secondary-color, 30%), 10%);
 
-  /* Set a gradient: transparent black at the top to almost-transparent black at the bottom */
-  background-image   : -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.15)));
-  background-image   : -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image   : -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image   : -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image   : -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-  background-image   : linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15));
-
-  /* Add a drop shadow */
-  -webkit-box-shadow : 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
-  -moz-box-shadow    : 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
-  box-shadow         : 0 .15em .23em 0 rgba(0, 0, 0, 0.5);
   pointer-events     : auto;
 }
 
@@ -422,11 +411,6 @@ $duration : 500ms;
   padding         : .15em 0;
   margin          : .15em 0;
 
-  /* Add "stitching" effect */
-  border-width    : .08em 0;
-  border-style    : dotted;
-  border-color    : #FFF;
-  border-color    : rgba(255, 255, 255, 0.7);
 }
 
 .github-fork-ribbon.left-top, .github-fork-ribbon.left-bottom {
