--- a/assets/css/resumecard.scss
+++ b/assets/css/resumecard.scss
@@ -105,6 +105,7 @@ code {
 // timeline
 .timeline {
   list-style : none;
+  word-break: break-word;
   padding    : 20px 0 20px;
   position   : relative;
 
